@@ -21,6 +21,7 @@ ___
 .Client:
 * Login Widget to be used in login-pages, i.e. via `<bcd-loginng>` custom tag
 * new dataprovider options tblSelect, tblSelectRow, tblUpdate, tblInsert, tblDelete which offers wrs -> object -> wrs functions (currently limited to wrs)
+* added bcdui.widget.notifications.Alerter to show slide in alerts, use bcdui.Alerter singleton
 .Security:
 .Development:
 .Bugfixes:
